Add jekyll-remote-theme plugin to config

--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,13 @@ kramdown:
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-remote-theme
 
 titles_from_headings:
   strip_title: true
   collections: true
+minima:
+skin: auto
 
 defaults:
   - scope:
